--- a/算法思维系列/递归详解.md
+++ b/算法思维系列/递归详解.md
@@ -10,7 +10,7 @@
 
 介绍分治之前，首先要弄清楚递归这个概念。
 
-递归的基本思想是某个函数直接或者间接地调用自身，这样就把原问题的求解转换为许多性质相同但是规模更小的子问题。我们只需要关注如何把原问题划分成符合条件的子问题，而不需要去研究这个子问题是如何被解决的。递归和枚举的区别在于：枚举是横向地把问题划分，然后依次求解子问题，而递归是把问题逐级分解，是纵向的拆分。
+递归的基本思想是某个函数直接或者间接地调用自身，这样就把原问题的求解转换为许多性质相同但是规模更小的子问题。我们只需要关注如何把原问题划 分成符合条件的子问题，而不需要去研究这个子问题是如何被解决的。递归和枚举的区别在于：**枚举是横向地把问题划分，然后依次求解子问题，而递归是把问题逐级分解，是纵向的拆分**。
 
 以下会举例说明我对递归的一点理解，**如果你不想看下去了，请记住这几个问题怎么回答：**
 
